# ai-agent-learning

./: 1.py  README.md  pyproject.toml
week1/: day5.py  day6,py  hello_requests.py  output.txt  todo.py  todos.json
week10/: README.md  agent.py  day67_memory.py  day68_error_handling.py  db.py  main.py  requirements.txt  test_db.py  test_full.py  tools.py  架构设计.md
week11/: .gitignore  README.md  agent.py  db.py  main.py  rag_engine.py  requirements.txt  runtime.txt  tools.py
week12/: 12周复盘.md  线上地址.md  部署概念笔记.md
week2/: README.md  day11_params.py  day13_client.py  day8_notes.md  day9_requests.py  main.py  requirements.txt  text_analyzer.py
week3/: README.md  day15_sqlite.py  day16_db_functions.py  test_api.py  todo_api.py
week4/: README.md  day22_html.html  day23_javascript.html  day24_fetch.html  todo_app.html
week5/: README.md  chat_api.py  day29_first_call.py  day30_system_prompt.py  day31_streaming.py  day32_conversation.py  day33_parameters.py  day34_error_handling.py  requirements.txt  test_chat_api.py
week6/: README.md  debug_prompt.py  main.py  requirements.txt  需求文档.md
week7/: REMADE.md  day43_embeddings.py  day44_chroma.py  day45_chunking.py  day46_rag_pipeline.py  day47_langchain.py  my_notes.txt  my_notes_qa.py  requirements.txt
week8/: .gitignore  README.md  main.py  optimize_retrieval.py  rag_engine.py  requirements.txt  test_engine.py  需求文档.md
week9/: README.md  calculator_agent.py  day57_concept.py  day58_function_calling.py  day59_real_tools.py  day60_multi_tool.py  day61_multi_step.py  day62_frameworks_notes.md  requirements.txt
(+6 files in other folders)
