[project]
name = "my-first-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.137.2",
    "requests>=2.34.2",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
name = "my-first-project"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn[standard]"
]
